# pgrow2serde

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
examples/: readme-async.rs  readme-sync.rs
src/: de.rs
