[package]
authors = ["a.power@1aim.com"]
description = "Easily deserialize postgres rows"
license = "MIT/Apache-2.0"
name = "pgrow2serde"
homepage = "https://github.com/deknowny/pgrow2serde"
repository = "https://github.com/deknowny/pgrow2serde"
version = "0.1.0"
edition = "2018"

[badges]
[badges.travis-ci]
repository = "1aim/serde_postgres"

[dependencies]
serde = "1.0.171"
tokio-postgres = "0.7.8"

[dev-dependencies]
postgres = "0.19.5"
serde = { version = "1.0.171", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros"] }
tokio-postgres = "0.7.8"

# [dependencies]
# serde = "1.0.104"
# tokio-postgres = { version = "0.5.2", default_features = false }

# [dev-dependencies]
# serde = { version = "1.0.104", features = [ "derive" ] }
# tokio = { version = "0.2.11", features = [ "macros" ] }
# tokio-postgres = "0.5.2"
# postgres = "0.17.4"
